<resources>
    <string name="app_name">TickleMediaAssignment</string>
    <string name="followers_label">Followers :</string>
    <string name="repositories_label">Repositories :</string>
    <string name="blog_label">Blog :</string>
    <string name="email_label">Email :</string>
    <string name="location_label">Location :</string>
    <string name="company_label">Company :</string>
    <string name="bio_label">Bio :</string>
    <string name="name_label">Name :</string>
</resources>
