<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="repoDetail"
            type="com.drinfi.ticklemediaassignment.data.RepoDetailResponse" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            imageURL="@{repoDetail.avatar_url}"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/name_label"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@{repoDetail.name}"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/bio_label"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@{repoDetail.bio}"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/company_label"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@{repoDetail.company}"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/location_label"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@{repoDetail.location}"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/email_label"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@{repoDetail.email}"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/blog_label"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@{repoDetail.blog}"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/repositories_label"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repositories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@{repoDetail.public_repos}"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/followers_label"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@{repoDetail.followers}"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>
</layout>